<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/gear_welcome_text"
        android:textColor="@color/white"
        android:textSize="16sp" 
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="*" >

        <TableRow android:id="@+id/tableRow1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/xaxis"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yaxis"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zaxis"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>
        
        
        <TableRow android:id="@+id/tableRow2">

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center" 
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/y_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/z_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp" />
            
        </TableRow>
 		<TableRow 
 		    android:id="@+id/tableRow3"
        	android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:paddingTop="70dp" >
            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"  /> 
        </TableRow>   
 		<TableRow 
 		    	android:id="@+id/tableRow4"
        		android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
       			android:layout_margin="5sp"
        		android:gravity="bottom"
        		android:paddingTop="10dp"
        		android:weightSum="2" >
			
	     	<Button
                android:id="@+id/start"
                android:background="@drawable/rect_shape"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"    			
                android:layout_gravity="bottom"
                android:text="@string/start"
                android:textColor="@color/black"
                android:onClick="startProgram" />
	     
           <Button
                android:id="@+id/stop"
                android:background="@drawable/rect_shape"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"    			
               	android:layout_gravity="bottom"
                android:text="@string/stop" 
                android:textColor="@color/black"/>
        </TableRow>   
    </TableLayout>

</LinearLayout>